# robocup-home-education-tayros

./: README.md
taydialog/dialogflow_ros/dialogflow_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
taydialog/dialogflow_ros/dialogflow_ros/config/: params.yaml
taydialog/dialogflow_ros/dialogflow_ros/launch/: dialogflow.launch
taydialog/dialogflow_ros/dialogflow_ros/scripts/: audio_server.py  detect_intent_service.py  google_client.py  hotword_dialogflow.py  mic_client.py
taydialog/dialogflow_ros/dialogflow_ros/scripts/dialogflow_ros/: MicrophoneStream.py  dialogflow_client.py
taydialog/dialogflow_ros/dialogflow_ros/scripts/dialogflow_ros/utils/: __init__.py  converters.py  output.py
taydialog/dialogflow_ros/dialogflow_ros/scripts/test/: test_intent_event.cpp  test_intent_event.py  test_intent_text.py
taydialog/dialogflow_ros/dialogflow_ros_msgs/: CMakeLists.txt  package.xml
taydialog/gb_dialog/: CMakeLists.txt  package.xml
taydialog/gb_dialog/include/dialog_cbs/: dialog_cbs.h
taydialog/gb_dialog/launch/: taydialog_services.launch
taydialog/gb_dialog/src/: DialogInterface.cpp  dialog_cbs_node.cpp
taydialog/gb_dialog/src/dialog_cbs/: dialog_cbs.cpp
tayfinder/: CMakeLists.txt  package.xml
tayfinder/behavior_trees_xml/: back_home.xml  find_mate.xml
tayfinder/include/back_home_BT/: BTNavAction.h  Move.h  Recovery.h  Say_data.h
tayfinder/include/find_mate_BT/: Bump_go.h  Get_mate_data.h  Is_any_mate.h  Set_goal.h
tayfinder/include/person_info/: Take_person_info.h
tayfinder/include/person_localizator/: BbxsTo3D.h  PersonLocalizator.h
tayfinder/launch/: find_my_mates.launch  person_localizator.launch  testing_launcher.launch
tayfinder/param/: coordinates.yaml  searching_parameters.yaml  sensor_go.yaml
tayfinder/src/: bbxs_to_3dpoint.cpp  find_my_mates.cpp  person_localizator.cpp  take_person_info_node.cpp
tayfinder/src/back_home_BT/: Move.cpp  Recovery.cpp  Say_data.cpp
tayfinder/src/find_mate_BT/: Bump_go.cpp  Get_mate_data.cpp  Is_any_mate.cpp  Set_goal.cpp
tayfinder/src/person_info/: Take_person_info.cpp
tayfinder/src/person_localization/: BbxsTo3D.cpp  PersonLocalizator.cpp
tayjarvis/: CMakeLists.txt  package.xml
tayjarvis/behavior_trees_xml/: back_home.xml  follow.xml  init_sequence.xml
tayjarvis/include/Set_route/: set_route.h
tayjarvis/include/follow/: Movement.h
tayjarvis/include/follow_BT/: BTNavAction.h  Follow.h  Move.h  Recovery.h  Set_goal.h  target_reached.h
tayjarvis/include/init_sequence_BT/: Localize_suitcase.h  Recognize.h  Welcome_human.h
tayjarvis/launch/: carry_my_package.launch
tayjarvis/param/: coordinates.yaml
tayjarvis/src/: suitcases_loader.cpp
tayjarvis/src/Set_route/: set_route.cpp
tayjarvis/src/follow/: Movement.cpp
tayjarvis/src/follow_BT/: Follow.cpp  Move.cpp  Recovery.cpp  Set_goal.cpp  target_reached.cpp
tayjarvis/src/init_sequence_BT/: Localize_suitcase.cpp  Recognize.cpp  Welcome_human.cpp
taymsgs/: CMakeLists.txt  package.xml
taymsgs/msg/: person.msg  person_data.msg  person_info.msg
taynav/: CMakeLists.txt  package.xml
taynav/include/: Movement.h  Set_goal_node.h  transforms.h
taynav/include/Set_route/: set_route.h
taynav/launch/: localization.launch  navigation.launch  octomap_mapping.launch  slam_mapping.launch
taynav/launch/includes/: amcl.launch.xml  move_base.launch.xml  velocity_smoother.launch.xml
taynav/maps/: lab1.pgm  lab1.yaml  map_clase.yaml
taynav/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  smoother.yaml
taynav/rviz/: navigation.rviz
taynav/src/: Movement.cpp  set_goal_node.cpp  set_route_node.cpp  tf_to_goal.cpp
taynav/src/Set_route/: set_route.cpp
tayvision/: CMakeLists.txt  package.xml
tayvision/include/bbx_color_detection/: BbxColorDetector.h
tayvision/include/bbx_object_detector/: BbxObjectDetector.h
tayvision/include/bbx_to_3d/: BbxTo3D.h
tayvision/include/object_bbx_filter/: BbxFilter.h
tayvision/include/pointing_detection/: PointingDetector.h
tayvision/launch/: bbx_color_detection.launch  bbx_filter.launch  bbx_pointing_detection.launch
tayvision/src/: bbx_color_detector_node.cpp  bbx_filter_node.cpp  bbx_object_detector_node.cpp  bbx_to_3d_node.cpp  pointing_detector_node.cpp
tayvision/src/bbx_color_detection/: BbxColorDetector.cpp
tayvision/src/bbx_object_detector/: BbxObjectDetector.cpp
tayvision/src/bbx_to_3d/: BbxTo3D.cpp
tayvision/src/object_bbx_filter/: BbxFilter.cpp
tayvision/src/pointing_detection/: PointingDetector.cpp
